argocd-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: argocd.davidconalrobinson.com
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.davidconalrobinson.com/oauth2/start?rd=https://$host$uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.davidconalrobinson.com/oauth2/auth
spec:
  rules:
  - host: argocd.davidconalrobinson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.davidconalrobinson.com
    secretName: letsencrypt-prod
